--- a/accessing-data-mongodb/pom.xml
+++ b/accessing-data-mongodb/pom.xml
@@ -35,6 +35,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+    <groupId>org.bouncycastle</groupId>
+    <artifactId>bcpkix-jdk15on</artifactId>
+    <version>1.50</version>
+</dependency>
 	</dependencies>
 
 	<build>
