--- a/accessing-data-mongodb/src/main/resources/application.properties
+++ b/accessing-data-mongodb/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 sprint.data.mongodb.host=localhost
 sprint.data.mongodb.port=27017
 sprint.data.mongodb.database=Book
-
+spring.data.mongo.repositories.enabled=true
+spring.batch.job.enabled=false
