--- a/accessing-data-mongodb/pom.xml
+++ b/accessing-data-mongodb/pom.xml
@@ -23,6 +23,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
+		<dependency>
+   <groupId>commons-configuration</groupId>
+   <artifactId>commons-configuration</artifactId>
+   <version>1.9</version>
+</dependency>
 <dependency>
     <groupId>org.bouncycastle</groupId>
     <artifactId>bcpkix-jdk15on</artifactId>
@@ -52,13 +57,14 @@
         <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>2.22.2</version><!--$NO-MVN-MAN-VER$-->
                 <configuration>
                 <testFailureIgnore>true</testFailureIgnore>
                 <shutdown>kill</shutdown>
                 <argLine>
-            --illegal-access=allow
-        </argLine> <!-- Use it if required-->
+            --illegal-access=debug
+           
+                  </argLine> <!-- Use it if required-->
                 </configuration>
             </plugin>
  
